--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"],
-      "@/*": ["./*"],
+      "~/*": ["./app/src/*"],
+      "@/*": ["./app/src/*"],
       "~~/*": ["./*"],
       "@@/*": ["./*"]
     }
